--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
+        background: rgb(49, 41, 101);
     }
     #result {
         margin-top: 20px;
@@ -16,14 +17,14 @@
 </style>
 </head>
 <body>
-  <h3>Welcome to</h3>
-    <h1> Dylan's Rock Paper Scissors</h1>
+  <h3 style="color: white;">Welcome to</h3>
+    <h1 style="color: white;"> Dylan's Rock Paper Scissors</h1>
     <div>
-        <button onclick="playGame('rock')">Rock</button>
-        <button onclick="playGame('paper')">Paper</button>
-        <button onclick="playGame('scissors')">Scissors</button>
+        <button onclick="playGame('rock')" style="border-radius: 5px;">Rock</button>
+        <button onclick="playGame('paper')" style="border-radius: 5px;">Paper</button>
+        <button onclick="playGame('scissors')" style="border-radius: 5px;">Scissors</button>
     </div>
-    <div id="result"></div>
+    <div id="result" style="color: white;"></div>
 
 <script>
 function playGame(playerChoice) {
@@ -47,5 +48,8 @@ function playGame(playerChoice) {
     document.getElementById('result').innerText = `You chose ${playerChoice}, Computer chose ${computerChoice}. ${result}`;
 }
 </script>
+<a href="https://lkdytz.github.io/Games/">
+  <button style="border-radius: 5px;">Go Back</button>
+</a>
 </body>
 </html>
